# Game-of-Life-SDL2

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/cell/: CMakeLists.txt  Cell.h
include/colors/: CMakeLists.txt  Colors.h
include/events/: CMakeLists.txt  Events.hpp
include/game/: CMakeLists.txt  Game.h
include/grid/: CMakeLists.txt  Grid.h
src/: CMakeLists.txt
src/cell/: CMakeLists.txt  Cell.cpp
src/colors/: CMakeLists.txt
src/events/: CMakeLists.txt  Events.cpp
src/game/: CMakeLists.txt  Game.cpp
src/grid/: CMakeLists.txt  Grid.cpp
